--- a/static/css/test.css
+++ b/static/css/test.css
@@ -13,3 +13,10 @@
     background-color: #28a745;
     border-color: #28a745;
 }
+
+.quiztion{
+    border: 1px solid #007bff;
+    border-radius: 5px;
+    padding: 5px;
+    margin-bottom: 5px;
+}
