--- a/templates/course2.html
+++ b/templates/course2.html
@@ -152,8 +152,7 @@
 </pre>
 
 
-{% if not session.get("role") %}
-<p>Ничего не отображается</p>
+{% if not session.get("role") %} <p>Невозможно определить роль пользователя, обратитесь к администратору сайта.</p>
 {% elif session.get("role") == 'Учащийся' %}
 <h4>Пройдите тест для проверки знаний</h4>
 <form id="quiz" action="/course1" method="POST">
@@ -241,7 +240,7 @@
             </div>
         </div>
         <div class="quiztion">
-            <p>5. Что входит в состав алфавита языка Python? </p>
+            <p>5. Что будет выведено в результате работы следующей программы? </p>
             <pre>
             <code>
                 x = 143.511
