--- a/templates/course4.html
+++ b/templates/course4.html
@@ -31,8 +31,7 @@
     ключевыми словами elif (сокращение от else-if).</p>
 
 
-{% if not session.get("role") %}
-<p>Ничего не отображается</p>
+{% if not session.get("role") %} <p>Невозможно определить роль пользователя, обратитесь к администратору сайта.</p>
 {% elif session.get("role") == 'Учащийся' %}
 <p>Здесь отображается только часть для учащегося</p>
 {% else %}
