--- a/templates/course5.html
+++ b/templates/course5.html
@@ -51,8 +51,7 @@
     цикла на шаг m. Если k = n или k &gt; n, цикл не выполнится ни разу.</p>
 
 
-{% if not session.get("role") %}
-<p>Ничего не отображается</p>
+{% if not session.get("role") %} <p>Невозможно определить роль пользователя, обратитесь к администратору сайта.</p>
 {% elif session.get("role") == 'Учащийся' %}
 <p>Здесь отображается только часть для учащегося</p>
 {% else %}
