--- a/templates/course6.html
+++ b/templates/course6.html
@@ -177,8 +177,7 @@
 <p>Здесь мы использовали один цикл внутри другого. Такая конструкция называется вложенным циклом.</p>
 
 
-{% if not session.get("role") %}
-<p>Ничего не отображается</p>
+{% if not session.get("role") %} <p>Невозможно определить роль пользователя, обратитесь к администратору сайта.</p>
 {% elif session.get("role") == 'Учащийся' %}
 <p>Здесь отображается только часть для учащегося</p>
 {% else %}
