--- a/templates/course7.html
+++ b/templates/course7.html
@@ -67,8 +67,7 @@
 <p>Результат функции можно сразу вывести на экран: print(max(6, 8)) Также мы можем присвоить результат работы функции любой глобальной переменной: x = max (6, 8). Одна функция может вызывать другую.</p>
 
 
-{% if not session.get("role") %}
-    <p>Ничего не отображается</p>    
+{% if not session.get("role") %} <p>Невозможно определить роль пользователя, обратитесь к администратору сайта.</p> 
 {% elif session.get("role") == 'Учащийся' %}
     <p>Здесь отображается только часть для учащегося</p>
 {% else %}
