--- a/templates/course3.html
+++ b/templates/course3.html
@@ -127,7 +127,7 @@
 <p>Логическим переменным также можно присваивать значения логических выражений, построенных с
     помощью известных вам логических операций И, ИЛИ, НЕ, которые в Python обозначаются соответственно and, or, not.</p>
 
-{% if not session.get("role") %} <p>Ничего не отображается</p>
+{% if not session.get("role") %} <p>Невозможно определить роль пользователя, обратитесь к администратору сайта.</p>
 {% elif session.get("role") == 'Учащийся' %}
 <p>Здесь отображается только часть для учащегося</p>
 {% else %}
