teacher test stub

--- a/templates/course1.html
+++ b/templates/course1.html
@@ -303,7 +303,8 @@
     </div>
 </form>
 {% else %}
-<p>Здесь отображается часть для учителя и администратора</p>
+<h4>Пройдите тест для проверки знаний</h4>
+<p>Отображение теста пока доступно только для учащихся</p>
 {% endif %}
 <script>
     document.getElementById('quiz').addEventListener('submit', function (event) {
