--- a/templates/course7.html
+++ b/templates/course7.html
@@ -71,7 +71,8 @@
 {% elif session.get("role") == 'Учащийся' %}
     <p>Здесь отображается только часть для учащегося</p>
 {% else %}
-    <p>Здесь отображается часть для учителя и администратора</p>
+<h4>Пройдите тест для проверки знаний</h4>
+<p>Отображение теста пока доступно только для учащихся</p>
 {% endif %}
 
 {% endblock %}
