changed content location

--- a/templates/course1.html
+++ b/templates/course1.html
@@ -1,6 +1,10 @@
 {% extends "layout.html" %}
 
 {% block body %}
+<h4>Общие сведения о языке программирования Python</h4>
+<p>Python — язык программирования высокого уровня, предназначенный для решения самого широкого круга задач.
+    С его помощью можно обрабатывать различные данные, проводить математические вычисления, создавать изображения,
+    работать с базами данных, разрабатывать веб-сайты.</p>
 
 <h4>Алфавит и словарь языка</h4>
 <p>Основой языка программирования Python, как и любого другого языка, является алфавит — набор допустимых символов,
